# Warp-as-History

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/demo/: angel.csv  bmx-trees.csv  dragon.csv
data/demo/angel/: camera_poses.npz
data/demo/dragon/: camera_poses.npz
data/training/: training_data.csv
helios/diffusers_version/: pipeline_helios_diffusers.py  scheduling_helios_diffusers.py  transformer_helios_diffusers.py
helios/modules/: transformer_helios.py
helios/modules/helios_kernels/: __init__.py  attention_dispatch.py  fp32_rmsnorm.py  tiled_linear.py  triton_norm.py  triton_rope.py  utils.py
helios/utils/: create_ema_zero3.py  create_ema_zero3_lora.py  prompt_embed_cache.py  train_config.py  utils_base.py  utils_helios_base.py  utils_helios_post.py  utils_recycle_batch.py  utils_recycle_single.py
scripts/: check_models.py  dryrun_online_warp_batch.py  infer_warp_as_history.py  train_warp_as_history_lora.py
warp_as_history/: __init__.py  camera_warp.py  defaults.py  pipeline.py
warp_as_history/training/: __init__.py  core.py  data.py  utils.py
