[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warp-as-history"
version = "0.1.0"
description = "Warp-as-History camera-control video generation and online Pi3X warp training."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["warp_as_history*", "helios*"]
